# PortCE

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  PortCE.config  README.md
PortCE_include/: PortCE.h  PortCE_Audio.h  PortCE_Extra.h  PortCE_Keybinds.h  PortCE_type.h  debug.h  fatdrvce.h  fileioc.h  fontlibc.h  graphx.h  graphy.h  hid.h  keypadc.h  lcddrvce.h  libload.h  msddrvce.h  srldrvce.h  tice.h  usbdrvce.h
PortCE_include/c++/: tireal.hpp
PortCE_include/ce/include/: debug.h
PortCE_include/ce/include/sys/: lcd.h  spi.h  util.h
PortCE_include/ce/include/ti/: flags.h  graph.h  info.h  python.h  real.h  tokens.h  ui.h
PortCE_include/cursor_graphx/: cursor_graphx.c  cursor_graphx.h
PortCE_include/fileioc/: fileioc.h
PortCE_include/graphx/: graphx.c
PortCE_include/graphy/: graphy.h
PortCE_include/hiddrvce/: hiddrvce.h
PortCE_include/srldrvce/: srldrvce.h
PortCE_include/sys/: power.h  rtc.h  spi.h  timers.h  util.h
PortCE_include/ti/: debug.h  error.h  flags.h  getcsc.h  getkey.h  graph.h  info.h  screen.h  sprintf.h  tokens.h  ui.h  vars.h
PortCE_include/ti/c++/: real
PortCE_src/: PortCE.c  PortCE.cpp  PortCE.h  PortCE_Common.c  PortCE_Common.h  PortCE_Extra.h  PortCE_Mixer.c  PortCE_Mixer.cpp  PortCE_Render.c  PortCE_Render.cpp  PortCE_Render.h  PortCE_SPI.c  PortCE_SPI.cpp  PortCE_SPI.h  PortCE_TiOS.c  PortCE_TiOS.cpp  PortCE_TiOS_Font.h  PortCE_compression.c  PortCE_fileioc.c  PortCE_fileioc.cpp  PortCE_hiddrvce.c  PortCE_internal.h  PortCE_libc.h  PortCE_real.c  PortCE_real.cpp  PortCE_ti84ce.c  PortCE_ti84ce.cpp  PortCE_usbdrvce.c  PortCE_usbdrvce.cpp  boot_sprintf.cpp  cursor_graphx.c  fileioc.cpp  fontlibc.c  fontlibc.cpp  frame_manipulation.cpp  frame_manipulation.hpp  graphx.c  graphx.cpp  graphx_data.h  graphxy_palette.h  (+8 more)
PortCE_src/graphz/: gfz_darken.cpp  graphx.cpp  graphy.cpp  graphy_data.h  graphz_palette.h  lib_graphx.hpp  lib_graphy.hpp  lib_graphz.hpp
cmake/: AddInstallRPATHSupport.cmake  AddUninstallTarget.cmake  InstallBasicPackageFiles.cmake  PortCEWeb.cmake
docs/attributions/: how-to-export-cpp-library.txt
examples/hello_world/: CMakeLists.txt
examples/hello_world/src/: main.cpp
src/: CMakeLists.txt  PortCE.cpp  PortCE_Common.cpp  PortCE_Common.h  PortCE_Mixer.cpp  PortCE_Render.cpp  PortCE_SPI.cpp  PortCE_SPI.h  PortCE_TiOS.cpp  PortCE_assert.h  PortCE_crt0.cpp  PortCE_fileioc.cpp  PortCE_gui.hpp  PortCE_memory.hpp  PortCE_quit.hpp  PortCE_ti84ce.cpp  PortCE_time.cpp  PortCE_usbdrvce.cpp  SDL_keybind.cpp  SDL_keybind.hpp  SDL_keybind_data.hpp  boot_sprintf.cpp  event.cpp  event.hpp  fileioc.cpp  fontlibc.cpp  frame_manipulation.cpp  frame_manipulation.hpp  gui.cpp  key_input.hpp  keyboard.cpp  memory.cpp  nano_time.hpp  os_flags.hpp  sys_basicusb.cpp  sys_power.cpp  ti84pceg.hpp  ti_flags.cpp  ti_info.cpp  ti_python.cpp  (+5 more)
src/bitGraphics_Font/: bitGraphics_Font.h
src/graphz/: gfz_darken.cpp  graphx.cpp  graphx_data.h  graphy.cpp  lib_graphx.hpp  lib_graphy.hpp  lib_graphz.hpp
src/include/: PortCE.h  PortCE_Extra.h  PortCE_Keybinds.h  compression.h  debug.h  fileioc.h  fontlibc.h  graphx.h  graphy.h  intce.h  keypadc.h  lcddrvce.h  usbdrvce.h
src/include/sys/: lcd.h  rtc.h  spi.h  timers.h  util.h
src/include/ti/: flags.h  graph.h  info.h  python.h  real.h  screen.h
src/include/ti/c++/: real
src/keybind_editor/: bitGraphics.cpp  bitGraphics.h  color.hpp  copyBuffer.cpp  copyBuffer.h  engine.h  fracExpKB.cpp  fracExpKB.h  fracExp_Internal.cpp  fracExp_Internal.h  keybind.cpp  keybind.h  keybind_data.h  keybind_editor.cpp  menu_keybinds.cpp  temp.txt
src/memory/: mmap_linear.cpp  static_linear.cpp  static_segregated.cpp
src_PortCE/: PortCE.c  PortCE.h  PortCE_Common.c  PortCE_Common.h  PortCE_Extra.h  PortCE_Mixer.c  PortCE_Render.c  PortCE_Render.h  PortCE_SPI.c  PortCE_TiOS.c  PortCE_TiOS.cpp  PortCE_TiOS_Font.h  PortCE_compression.c  PortCE_fileioc.c  PortCE_fileioc.cpp  PortCE_hiddrvce.c  PortCE_internal.h  PortCE_libc.c  PortCE_libc.h  PortCE_real.c  PortCE_ti84ce.c  PortCE_ti84ce.cpp  PortCE_type.h  PortCE_usbdrvce.c
src_PortCE/PortCE_config/: PortCE_Audio.h  PortCE_Keybinds.h
src_PortCE/PortCE_include/ce/include/: intce.h  tice.h
src_PortCE/PortCE_include/ce/include/sys/: lcd.h  power.h  rtc.h  spi.h  timers.h  util.h
src_PortCE/PortCE_include/ce/include/ti/: error.h  getcsc.h  real.h  ui.h  vars.h
src_PortCE/PortCE_include/ce/include/ti/c++/: real
src_PortCE/PortCE_include/cursor_graphx/: cursor_graphx.c  cursor_graphx.h
src_PortCE/PortCE_include/fatdrvce/: fatdrvce.h
src_PortCE/PortCE_include/fileioc/: fileioc.h
src_PortCE/PortCE_include/graphx/: graphx.c  graphx.h
src_PortCE/PortCE_include/graphy/: graphy.c  graphy.h
src_PortCE/PortCE_include/hiddrvce/: hid.h  hiddrvce.h
src_PortCE/PortCE_include/lcddrvce/: lcddrvce.h
test/zx7_decompression/: CMakeLists.txt
test/zx7_decompression/src/: main.c  truth.h
test/zx7_decompression/src/gfx/: background.c  background.h  convimg.yaml.lst  gfx.h  global_palette.c  global_palette.h
web/: portce_shell.html.in
